 2003-09-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skserver.cpp: Modify bind code that uses getaddrinfo
      so it tries each of the results in turn until one works, instead
      of bailing out on the first failure.
 2003-09-23 Al Riddoch <alriddoch@zepler.org>
    - ping/ping.cpp: Add include required since headers were simplified.
 2003-09-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skserver.h: Make service an int in setService() as it always
      is elsewhere.
    - skstream/skserver.h, skstream/skserver.cpp: Make open() methods return
      true on success, and false on failure.
    - skstream/skserver.h, skstream/skserver.cpp: Add new method for
      creating and binding to a socket, to avoid duplicating code.
 2003-09-06 Martin Pollard <circlemaster@blueyonder.co.uk>
    - configure.in: changed win32 code to use winsock2.h instead of winsock.h.
    - skstream/skstream.h: added a guard #ifndef SOCKET_ERROR to it's
      definition.
 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.h, skstream/skstream.cpp: Add extra argument
      to dgram_streambuf::setTarget() so protocol can be passed in.
      Add #warnings if the old non getaddrinfo code is being used.
 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstreamconfig.h.in, skstream/skstream_unix.h,
      skstream/skstream.h, skstream/skstream.cpp,
      skstream/skserver_unix.h, skstream/skserver.h, skstream/skserver.cpp:
      Remove as much platform sensitive code from the headers as possible,
      and simplify the generated header. Improve formatting and header
      guards for readability.
    - skstream/skserver_unix.h: Add a new constructor for unix_socket_server
      so it can be instanced without already knowing the details of the
      service.
 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.h, skstream/skstream.cpp: Modify udp_socket_stream
      constructor so that it does not create the socket immediatly.